@@ -100,6 +100,29 @@ void GnomeCmdData::AdvrenameConfig::Profile::reset()
 }
 
 
+void GnomeCmdData::AdvrenameConfig::fill_regex_model(Profile &profile)
+{
+    if (!regexes)
+        return;
+
+    GtkTreeIter iter;
+
+    for (vector<Profile::Regex>::const_iterator r=profile.regexes.begin(); r!=profile.regexes.end(); ++r)
+    {
+        GnomeCmdAdvrenameDialog::Regex *rx = new GnomeCmdAdvrenameDialog::Regex(r->pattern.c_str(), r->replace.c_str(), r->match_case);
+
+        gtk_list_store_append (GTK_LIST_STORE (regexes), &iter);
+        gtk_list_store_set (GTK_LIST_STORE (regexes), &iter,
+                            GnomeCmdAdvrenameDialog::COL_REGEX, rx,
+                            GnomeCmdAdvrenameDialog::COL_MALFORMED_REGEX, !*rx,
+                            GnomeCmdAdvrenameDialog::COL_PATTERN, r->pattern.c_str(),
+                            GnomeCmdAdvrenameDialog::COL_REPLACE, r->replace.c_str(),
+                            GnomeCmdAdvrenameDialog::COL_MATCH_CASE, r->match_case ? _("Yes") : _("No"),
+                            -1);
+    }
+}
+
+
 inline gint get_int (const gchar *path, int def)
 {
     gboolean b = FALSE;
