@@ -103,6 +103,8 @@ struct GnomeCmdData
         AdvrenameConfig(): width(600), height(400),
                            templates(ADVRENAME_HISTORY_SIZE), regexes(NULL)    {}
         ~AdvrenameConfig()          {  if (regexes)  g_object_unref (regexes);  }
+
+        void fill_regex_model(Profile &profile);
     };
 
     struct IntViewerConfig
